--- a/license.html
+++ b/license.html
@@ -1,76 +1,92 @@
 <!DOCTYPE html>
 <html lang="vi">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>HOSL-1.0 – Hyggshi OS License v1.0</title>
-  <link rel="icon" href="Resources/favicon.ico" />
-  <link rel="stylesheet" href="style.css" />
-  <style>
-    .section-title{font-size:2.35rem;font-weight:900;letter-spacing:.09rem;background:linear-gradient(88deg,var(--brand-1,#8aa2ff),var(--brand-2,#14deb3));-webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text;margin-bottom:.7em;}
-    .feature-card{background:var(--surface-1,rgba(255,255,255,0.11));border-radius:23px;box-shadow:0 8px 32px rgba(68,110,255,0.13);padding:2.05rem 1.7rem 2.1rem 1.75rem;color:var(--text-primary,#fff);font-size:1.09rem;line-height:1.79;opacity:0;transform:translateY(47px);transition:box-shadow .22s,transform .21s,opacity .33s;}
-    .feature-card.show{opacity:1;transform:translateY(0);}
-    .feature-card:hover{background:rgba(80,200,255,0.13);box-shadow:0 14px 75px 0 rgba(45,188,255,0.13);transform:translateY(-7px) scale(1.015);}
-    @media(max-width:720px){.section-title{font-size:1.3rem;}.feature-card{padding:.82rem .56rem 1rem .65rem;border-radius:12px;}}
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>License – Hyggshi OS</title>
+  <link rel="icon" href="Resources/favicon.ico">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <div class="container">
-    <header class="header">
-      <nav class="nav">
-        <div class="logo">
-          <img src="Resources/upscalemedia-transformed.png" alt="Hyggshi OS Logo" style="height: 40px; width: 40px; object-fit: contain; vertical-align: middle; margin-right: 0.5rem; border-radius: 10px; background: rgba(255,255,255,0.2);">
-          <span class="logo-text">Hyggshi OS</span>
+  <header class="header">
+    <div class="container nav">
+      <div class="logo">
+        <img src="Resources/upscalemedia-transformed.png" alt="Logo">
+        <span>☁️ Hyggshi OS</span>
+      </div>
+      <ul class="nav-menu">
+        <li><a href="index.html" class="nav-link">Home</a></li>
+        <li><a href="About.html" class="nav-link">About</a></li>
+        <li><a href="projects.html" class="nav-link">Projects</a></li>
+        <li><a href="license.html" class="nav-link active">License</a></li>
+        <li><a href="download.html" class="nav-link">Download</a></li>
+      </ul>
+      <button class="theme-toggle" title="Chuyển đổi chủ đề">☀️</button>
+    </div>
+  </header>
+
+  <main class="container section-spacer">
+    <div class="card fade-in-up" style="max-width: 900px; margin: 0 auto;">
+      <div style="text-align: center; margin-bottom: 2rem;">
+        <span class="badge active cloud-float" style="font-size: 1rem;">📜 License</span>
+        <h1 class="text-gradient" style="margin-top: 1rem; font-size: 2.5rem;">HOSL-1.0</h1>
+        <p style="color: var(--c-text-muted);">Hyggshi OS License v1.0</p>
+      </div>
+
+      <div style="border-left: 3px solid var(--c-primary); padding-left: 1.5rem; margin-bottom: 2rem;">
+        <p><strong>Copyright © 2025 Nguyễn Minh Phúc</strong></p>
+      </div>
+
+      <div style="display: grid; gap: 2rem;">
+        <div>
+          <h3 style="color: var(--c-primary); margin-bottom: 0.5rem;">1. Quyền sử dụng</h3>
+          <p style="color: var(--c-text-muted); line-height: 1.8;">
+            Phần mềm này là mã nguồn mở. Bạn được phép sử dụng, sao chép, sửa đổi và phân phối mã nguồn miễn phí.
+          </p>
         </div>
-        <ul class="nav-menu">
-          <li><a href="index.html" class="nav-link">Home</a></li>
-          <li><a href="About.html" class="nav-link">About</a></li>
-          <li><a href="projects.html" class="nav-link">Projects</a></li>
-          <li><a href="History.html" class="nav-link">History</a></li>
-          <li><a href="The-Cases.html" class="nav-link">Cases</a></li>
-          <li><a href="download.html" class="nav-link">Download</a></li>
-          <li><a href="license.html" class="nav-link active">License</a></li>
-          <li><a href="erorrcode.html" class="nav-link">Error</a></li>
-          <li><a href="timeline.html" class="nav-link">Timeline</a></li>
-          <li><a href="OSmain.html" class="nav-link">OS</a></li>
-        </ul>
-      </nav>
-    </header>
 
-    <main class="main">
-      <section class="history-section">
-        <div class="container">
-          <h1 class="section-title">HOSL-1.0 – Hyggshi OS License v1.0</h1>
-          <div class="feature-card" style="text-align:left;">
-            <p>HOSL-1.0 – Hyggshi OS License v1.0</p>
-            <p><strong>Copyright © 2025 [Your Name]</strong></p>
-            <p>&nbsp;</p>
-            <h3>1. Usage Rights</h3>
-            <p>This software is licensed as open source. You may use, copy, modify, and distribute the source code free of charge, subject to the following conditions.</p>
-            <h3>2. Commercial Restrictions</h3>
-            <p>This software may not be used for commercial purposes or for direct or indirect profit, in any form.</p>
-            <h3>3. Special Conditions</h3>
-            <p>a) It is not required to use this source code for projects that use external automated tools or third-party services.</p>
-            <p>b) If you use this source code to create an operating system (OS) or graphical interface (GUI) in Roblox Studio, you must clearly indicate the line:</p>
-            <p style="padding:0.5rem 0 0.75rem 0;"><em>By [Your Name]</em></p>
-            <p>in a prominent place in the product or accompanying documentation.</p>
-            <h3>4. Disclaimer</h3>
-            <p>The software is provided "AS IS", without any warranties, either express or implied. The author is not responsible for any damages, losses or consequences arising from the use of the software.</p>
-            <h3>5. License Acceptance</h3>
-            <p>By using or distributing this software, you are deemed to have read, understood and agreed to abide by the terms of the HOSL-1.0 license.</p>
-          </div>
+        <div>
+          <h3 style="color: var(--c-primary); margin-bottom: 0.5rem;">2. Hạn chế thương mại</h3>
+          <p style="color: var(--c-text-muted); line-height: 1.8;">
+            Phần mềm này <strong>KHÔNG</strong> được phép sử dụng cho mục đích thương mại hoặc kiếm lợi nhuận dưới bất
+            kỳ hình thức nào.
+          </p>
         </div>
-      </section>
-    </main>
 
-    <footer class="footer">
-      <p>© 2024 - 2025 Hyggshi OS Project Center. All rights reserved. | <a href="license.html" style="color:#7289da;text-decoration:underline;">License</a></p>
-    </footer>
-  </div>
+        <div>
+          <h3 style="color: var(--c-primary); margin-bottom: 0.5rem;">3. Điều kiện đặc biệt</h3>
+          <p style="color: var(--c-text-muted); line-height: 1.8;">
+            Nếu bạn sử dụng mã nguồn này để tạo OS hoặc GUI trong Roblox Studio, bạn phải ghi rõ:<br>
+            <code
+              style="background: rgba(94, 208, 198, 0.2); padding: 2px 8px; border-radius: 4px; color: var(--c-primary);">By Hyggshi OS Team</code>
+          </p>
+        </div>
 
-  <script src="script.js"></script>
-  <script>(function(){function fade(){document.querySelectorAll('.feature-card').forEach(e=>{var r=e.getBoundingClientRect();if(r.top<window.innerHeight-50)e.classList.add('show');});}window.addEventListener('scroll',fade,{passive:true});fade();setTimeout(fade,350);})();</script>
+        <div>
+          <h3 style="color: var(--c-primary); margin-bottom: 0.5rem;">4. Miễn trừ trách nhiệm</h3>
+          <p style="color: var(--c-text-muted); line-height: 1.8;">
+            Phần mềm được cung cấp "AS IS", không có bảo đảm. Tác giả không chịu trách nhiệm về thiệt hại phát sinh.
+          </p>
+        </div>
+
+        <div>
+          <h3 style="color: var(--c-primary); margin-bottom: 0.5rem;">5. Chấp thuận</h3>
+          <p style="color: var(--c-text-muted); line-height: 1.8;">
+            Bằng việc sử dụng phần mềm này, bạn đồng ý tuân thủ các điều khoản của License HOSL-1.0.
+          </p>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <footer class="footer">
+    <div class="container">
+      <p style="color: var(--c-text-muted);">© 2024 - 2025 Hyggshi OS Project Center. ☁️ Cloudar OS Style.</p>
+    </div>
+  </footer>
+  <script src="theme.js"></script>
 </body>
+
 </html>
-
-
