--- a/timeline.html
+++ b/timeline.html
@@ -1,278 +1,86 @@
 <!DOCTYPE html>
 <html lang="vi">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Timeline – Hyggshi OS Project Center</title>
-  <link rel="icon" href="Resources/favicon.ico" />
-  <link rel="stylesheet" href="style.css" />
-  <style>
-    .timeline-hero {
-      text-align: center;
-      padding: 3.2rem 0 2.6rem 0;
-      color: white;
-    }
-    .timeline-hero h1 {
-      font-size: 3.2rem;
-      font-weight: 900;
-      margin-bottom: 0.7rem;
-      letter-spacing: 1.7px;
-      line-height: 1.07;
-      background: linear-gradient(80deg, var(--brand-1), var(--brand-2) 90%, #fff 120%);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
-    }
-    .timeline-hero p {
-      font-size: 1.15rem;
-      opacity: 0.9;
-      color: var(--text-secondary);
-      font-weight: 500;
-      margin-top: 0.3em;
-    }
-    .timeline-container {
-      max-width: 922px;
-      margin: 0 auto;
-      padding: 0 12px 40px 12px;
-      position: relative;
-    }
-    .timeline-list {
-      position: relative;
-    }
-    .timeline-line {
-      position: absolute;
-      left: 50%;
-      top: 0; bottom: 0;
-      width: 7px;
-      margin-left: -3.5px;
-      background: linear-gradient(180deg,
-        transparent 3%, var(--brand-1) 30%, var(--brand-2) 70%, transparent 98%);
-      border-radius: 6px;
-      z-index: 1;
-      opacity: 0.33;
-      filter: blur(0.5px);
-    }
-    .timeline-item {
-      display: flex;
-      align-items: flex-start;
-      margin-bottom: 3.1rem;
-      position: relative;
-      z-index: 2;
-      min-height: 100px;
-      opacity: 0;
-      transform: translateY(45px);
-      transition: opacity .85s cubic-bezier(.6,.4,0,1), transform .9s cubic-bezier(.45,.15,0,1);
-    }
-    .timeline-item.visible {
-      opacity: 1;
-      transform: translateY(0);
-    }
-    .bubble-date {
-      flex-shrink: 0;
-      background: linear-gradient(135deg, var(--brand-1), var(--brand-2) 65%);
-      color: #fff;
-      font-size: 1.45rem;
-      font-weight: bold;
-      min-width: 84px;
-      min-height: 84px;
-      border-radius: 50%;
-      box-shadow: 0 6px 28px rgba(76,140,255,.13), 0 1.5px 10px rgba(52,222,197,.12);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-right: 32px;
-      border: 3.3px solid rgba(255,255,255,.14);
-      outline: 2px solid var(--glass-border);
-      z-index: 2;
-      transition: box-shadow .25s, border-color .22s;
-      position: relative;
-    }
-    .timeline-item:nth-child(even) { flex-direction: row-reverse; }
-    .timeline-item:nth-child(even) .bubble-date { margin-right: 0; margin-left: 32px; }
-    /* Timeline ICON */
-    .bubble-date::after {
-      content: ""; display: block;
-      width: 11px; height: 11px;
-      border-radius: 50%;
-      background: var(--surface-1);
-      border: 2px solid var(--brand-2);
-      box-shadow: 0 0 4px var(--brand-2);
-      position: absolute;
-      right: 16px; bottom: 12px;
-      opacity: .22;
-    }
-    .timeline-card {
-      flex: 1 1 auto;
-      background: var(--surface-1);
-      border-radius: 24px;
-      backdrop-filter: blur(32px);
-      box-shadow: 0 15px 54px rgba(60,80,150,0.18), 0 2px 20px rgba(30,30,56,0.11);
-      border: 2.2px solid var(--glass-border);
-      padding: 2.2rem 2.1rem 2.15rem 2.1rem;
-      margin-top: 0;
-      position: relative;
-      color: var(--text-primary);
-      transition: box-shadow .2s, border-color .13s, transform .17s;
-      will-change: transform, box-shadow;
-      cursor: default;
-      overflow: hidden;
-    }
-    .timeline-card:hover {
-      box-shadow: 0 16px 72px 0 rgba(52,180,255,0.25), 0 2px 20px rgba(30,30,56,0.14);
-      border-color: var(--brand-1);
-      transform: translateY(-4px) scale(1.018);
-    }
-    .timeline-card h3 {
-      font-size: 1.27rem;
-      font-weight: 800;
-      margin-bottom: 10px;
-      letter-spacing: .14px;
-      color: var(--brand-1-strong, #8aa2ff);
-    }
-    .timeline-card p {
-      font-size: 1.04rem;
-      line-height: 1.6;
-      color: var(--text-secondary);
-    }
-    @media (max-width: 950px) { .timeline-container { max-width: 99vw; } }
-    @media (max-width: 768px) {
-      .timeline-item, .timeline-item:nth-child(even) {
-        flex-direction: column !important; align-items: stretch;
-      }
-      .bubble-date, .timeline-item:nth-child(even) .bubble-date {
-        margin: 0 auto 18px auto; }
-      .timeline-card { padding: 1.29rem 1.1rem 1.23rem 1.16rem; border-radius: 15px; }
-      .timeline-hero h1 { font-size: 2.05rem; }
-    }
-    @media (max-width: 440px) {
-      .timeline-container { padding-left: 4px; padding-right: 4px; }
-      .timeline-card { padding: 0.8rem .6rem; border-radius: 9px; }
-      .bubble-date { min-width: 60px; min-height: 60px; font-size: 1.01rem; }
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <header class="header">
-      <nav class="nav">
-        <div class="logo">
-          <img src="Resources/upscalemedia-transformed.png" alt="Hyggshi OS Logo" style="height: 40px; width: 40px; object-fit: contain; vertical-align: middle; margin-right: 0.5rem; border-radius: 10px; background: rgba(255,255,255,0.2);">
-          <span class="logo-text">Hyggshi OS</span>
-        </div>
-        <ul class="nav-menu">
-          <li><a href="index.html" class="nav-link">Home</a></li>
-          <li><a href="About.html" class="nav-link">About</a></li>
-          <li><a href="projects.html" class="nav-link">Projects</a></li>
-          <li><a href="History.html" class="nav-link">History</a></li>
-          <li><a href="The-Cases.html" class="nav-link">Cases</a></li>
-          <li><a href="download.html" class="nav-link">Download</a></li>
-          <li><a href="license.html" class="nav-link">License</a></li>
-          <li><a href="erorrcode.html" class="nav-link">Error</a></li>
-          <li><a href="timeline.html" class="nav-link active">Timeline</a></li>
-          <li><a href="OSmain.html" class="nav-link">OS</a></li>
-        </ul>
-      </nav>
-    </header>
 
-    <main class="main">
-      <section class="timeline-hero">
-        <h1>📅 Timeline – Lịch sử phát triển</h1>
-        <p>Dòng thời gian chi tiết về quá trình phát triển Hyggshi OS</p>
-      </section>
-      <section class="timeline-container">
-        <div class="timeline-line"></div>
-        <div class="timeline-list">
-          <div class="timeline-item">
-            <div class="bubble-date">2024</div>
-            <div class="timeline-card">
-              <h3>🎯 Khởi đầu dự án</h3>
-              <p>Bắt đầu với ý tưởng tạo một hệ điều hành mô phỏng mã nguồn mở trên Roblox. Sau 50 lần bị từ chối mã nguồn từ các dự án khác, quyết định tự phát triển.</p>
-            </div>
-          </div>
-          <div class="timeline-item">
-            <div class="bubble-date">2024</div>
-            <div class="timeline-card">
-              <h3>🚀 Hyggshi OS 1.0</h3>
-              <p>Phiên bản đầu tiên ra mắt với các tính năng cơ bản: cửa sổ, giao diện, Start Menu đơn giản. Đánh dấu sự khởi đầu của một hệ điều hành mã nguồn mở.</p>
-            </div>
-          </div>
-          <div class="timeline-item">
-            <div class="bubble-date">2024</div>
-            <div class="timeline-card">
-              <h3>🔧 Hyggshi OS 1.1.6</h3>
-              <p>Cải tiến và bổ sung ứng dụng, chuẩn bị nền tảng cho các phiên bản nâng cao và thử nghiệm.</p>
-            </div>
-          </div>
-          <div class="timeline-item">
-            <div class="bubble-date">2024</div>
-            <div class="timeline-card">
-              <h3>🧪 Hyggshi OS Developer</h3>
-              <p>Phiên bản thử nghiệm với ứng dụng Zashi Messaging - cho phép nhắn tin không bị kiểm duyệt bởi Roblox chat mặc định.</p>
-            </div>
-          </div>
-          <div class="timeline-item">
-            <div class="bubble-date">2024</div>
-            <div class="timeline-card">
-              <h3>📀 Hyggshi OS 2.0</h3>
-              <p>Phiên bản chính thức thứ hai với giao diện chuyên nghiệp hơn, cải thiện quản lý cửa sổ và Start Menu. Tích hợp các yếu tố từ bản Developer.</p>
-            </div>
-          </div>
-          <div class="timeline-item">
-            <div class="bubble-date">2025</div>
-            <div class="timeline-card">
-              <h3>⚠️ Vấn đề bản quyền</h3>
-              <p>Intel yêu cầu thay đổi âm thanh khởi động do nghi ngờ vi phạm bản quyền. Đây là bài học về việc sử dụng tài sản âm thanh.</p>
-            </div>
-          </div>
-          <div class="timeline-item">
-            <div class="bubble-date">2025</div>
-            <div class="timeline-card">
-              <h3>🚧 Hyggshi OS 3.0</h3>
-              <p>Bắt đầu phát triển phiên bản mới nhất với định hướng ổn định, mã nguồn mở hoàn toàn và nâng cấp toàn diện.</p>
-            </div>
-          </div>
-          <div class="timeline-item">
-            <div class="bubble-date">2025</div>
-            <div class="timeline-card">
-              <h3>🧩 Hyggshi OS Flex</h3>
-              <p>Phiên bản nhẹ và linh hoạt, được thiết kế để dễ dàng chỉnh sửa, tùy biến và phát triển theo ý muốn.</p>
-            </div>
-          </div>
-          <div class="timeline-item">
-            <div class="bubble-date">2025</div>
-            <div class="timeline-card">
-              <h3>🌐 Mở rộng cộng đồng</h3>
-              <p>Phát triển hệ thống Module, Zashi Messaging và thu hút sự chú ý của cộng đồng Roblox. Tạo ra một hệ sinh thái mở.</p>
-            </div>
-          </div>
-          <div class="timeline-item">
-            <div class="bubble-date">2025</div>
-            <div class="timeline-card">
-              <h3>🛠️ Ra mắt Engine riêng</h3>
-              <p>Ngày <b>05/10/2025</b>, nhà phát triển đã tạo ra bộ engine riêng <a href="https://github.com/HyggshiOSDeveloper/Hyggshi-OS-Engine" target="_blank" rel="noopener" style="color:var(--brand-2)"><b>Hyggshi OS Engine</b></a>, mở mã nguồn cho cộng đồng phát triển các hệ điều hành và giao diện mạnh mẽ hơn trên Roblox.</p>
-            </div>
-          </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Timeline – Hyggshi OS</title>
+  <link rel="icon" href="Resources/favicon.ico">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <header class="header">
+    <div class="container nav">
+      <div class="logo">
+        <img src="Resources/upscalemedia-transformed.png" alt="Logo">
+        <span>☁️ Hyggshi OS</span>
+      </div>
+      <ul class="nav-menu">
+        <li><a href="index.html" class="nav-link">Home</a></li>
+        <li><a href="About.html" class="nav-link">About</a></li>
+        <li><a href="projects.html" class="nav-link">Projects</a></li>
+        <li><a href="History.html" class="nav-link">History</a></li>
+        <li><a href="timeline.html" class="nav-link active">Timeline</a></li>
+      </ul>
+      <button class="theme-toggle" title="Chuyển đổi chủ đề">☀️</button>
+    </div>
+  </header>
+
+  <main class="container">
+    <section class="section-spacer" style="text-align: center;">
+      <span class="badge active cloud-float fade-in-up">📅 Timeline</span>
+      <h1 class="fade-in-up" style="margin-top: 1rem;">Dòng <span class="text-gradient">Thời gian</span></h1>
+      <p class="fade-in-up delay-1" style="color: var(--c-text-muted);">Hành trình phát triển Hyggshi OS</p>
+    </section>
+
+    <section class="grid fade-in-up delay-2" style="max-width: 700px; margin: 0 auto; gap: 1.5rem;">
+
+      <div class="card" style="border-left: 4px solid var(--c-primary);">
+        <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 1rem;">
+          <span class="badge" style="background: var(--c-bg-surface);">2023</span>
+          <span style="font-size: 1.5rem;">💡</span>
         </div>
-      </section>
-    </main>
-    <footer class="footer">
-      <p>© 2024 - 2025 Hyggshi OS Project Center. All rights reserved. | <a href="license.html" style="color:#7289da;text-decoration:underline;">License</a></p>
-    </footer>
-  </div>
-  <script src="script.js"></script>
-  <script>
-    // Fade in timeline items on scroll
-    (function(){
-      function onScroll() {
-        document.querySelectorAll('.timeline-item').forEach(item => {
-          var rect = item.getBoundingClientRect();
-          if(rect.top < window.innerHeight - 80) item.classList.add('visible');
-        });
-      }
-      window.addEventListener('scroll', onScroll, {passive: true});
-      onScroll();
-      setTimeout(onScroll, 440); // ensure first load
-    })();
-  </script>
+        <h3>Khởi đầu</h3>
+        <p style="color: var(--c-text-muted);">Ý tưởng Hyggshi OS hình thành sau 50 lần bị từ chối mã nguồn.</p>
+      </div>
+
+      <div class="card" style="border-left: 4px solid var(--c-primary);">
+        <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 1rem;">
+          <span class="badge" style="background: var(--c-bg-surface);">2024</span>
+          <span style="font-size: 1.5rem;">🚀</span>
+        </div>
+        <h3>Version 1.0 - 2.0</h3>
+        <p style="color: var(--c-text-muted);">Ra mắt các phiên bản đầu tiên với giao diện Glassmorphism.</p>
+      </div>
+
+      <div class="card" style="border-left: 4px solid var(--c-accent);">
+        <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 1rem;">
+          <span class="badge active">2025</span>
+          <span style="font-size: 1.5rem;">☁️</span>
+        </div>
+        <h3>Cloudar OS Style</h3>
+        <p style="color: var(--c-text-muted);">Chuyển đổi sang phong cách Cloud với tông màu Cyan nhẹ nhàng.</p>
+      </div>
+
+      <div class="card" style="border-left: 4px solid var(--c-warning);">
+        <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 1rem;">
+          <span class="badge warning">Hiện tại</span>
+          <span style="font-size: 1.5rem;">🔧</span>
+        </div>
+        <h3>Version 3.0 Development</h3>
+        <p style="color: var(--c-text-muted);">Phát triển Module System, Cloud Sync, và Engine mới.</p>
+      </div>
+
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="container">
+      <p style="color: var(--c-text-muted);">© 2024 - 2025 Hyggshi OS Project Center. ☁️ Cloudar OS Style.</p>
+    </div>
+  </footer>
+  <script src="theme.js"></script>
 </body>
+
 </html>
